# CoolRunnings

./: .gitignore  README.md  requirements.txt  setup.cfg
_patch/core/accessor/: persistent.py
coolruns/: __init__.py  __main__.py  _typing.py  accessor.py  coolrunn.py  coolruns.py  datman.py  dimms.py  hooks.py  iterops.py  oper.py  patterns.py  persistor.py
coolruns/accessor/: __init__.py  coolrunnings.py
coolruns/catena/: __init__.py  catena.py  typn.py
coolruns/chain/: __init__.py  chain.py
coolruns/dimm/: __init__.py  _datman.py  _dimm.py  _sketch.py  datman.py  dimm.py  iter.py  sketch.py
coolruns/dimms/: __init__.py  dimms.py
coolruns/hooks/: __init__.py  hooks.py
coolruns/iterops/: __init__.py  iterops.py  operations.py
coolruns/persistor/: __init__.py  persistor.py
coolruns/tests/: __init__.py  dmmy.py
coolruns/tests/helpers/: __init__.py
coolruns/tests/sampler/: __init__.py  sampler.py
coolruns/tool/: __init__.py  _options.py  _pydev.py  meta.py  metas.py  persistor.py  utils.py
coolruns/typn/: __init__.py  _types.py
persistor/: __init__.py  hooks.py  persistor.py
storage/: _persistor.py  coolrunnings_callargs.py  cruns.py  dimm.py  dimm_verbose.py  iter.py  iter_verbosee.py  metas.py  owrap.py  tool_verbose.py
storage/tool/: __init__.py  _pydev.py
storage/typn/: __init__.py  _types.py
