[metadata]
name = pandas-cool-runnings
version = 0.1.0
description = Dataframe sliding windows with dimensional data scope
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/dangreb/CoolRunnings"
author = dangreb
author_email = greb.pro@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
keywords =
    time series
    sliding windows
    data provisioning
    pandas extension

[options]
package_dir =
    =coolruns
packages = find:
install_requires =
    numpy
    pandas
python_requires = >=3.10
zip_safe = False

[options.packages.find]
where = coolruns

[options.extras_require]
test =
    mypy
    pandas-stubs
    pytest